# azure-postgresql-rust-quickstart

./: Cargo.toml  README.md
src/: main.rs
